@@ -2,6 +2,7 @@
     * Increased maximum FoV value to 175 degrees
     * Ctrl+W now closes the 3D preview window
     * Added buttons for quick isometric camera setup
+    * Improved camera controls in parallel projection mode
 
 1.1.6 - 2013-03-06
     * Added Comparator block
